--- a/ShopOnline.Web/Pages/ShoppingCart.razor
+++ b/ShopOnline.Web/Pages/ShoppingCart.razor
@@ -27,8 +27,9 @@ else
                             <div class="mb-4">@item.ProductDescription</div>
                             <span>
                                 Price: <b>@item.Price.ToString("C")</b>
-                                <input type="number" @bind="@item.Qty" />
-                                <button class="btn btn-info btn-sm"
+                                <input @oninput="(() => UpdateQty_Input(item.Id))"
+                                    type="number" @bind="@item.Qty" />
+                                <button data-itemId="@item.Id" class="btn btn-info btn-sm update-qty"
                                     @onclick="(() => UpdateQtyCartItem_Click(item.Id, item.Qty))">
                                     Update Qty
                                 </button>
@@ -44,7 +45,7 @@ else
             <div class="col-md-3">
                 <h5>Cart Summary</h5>
                 <div class="mt-2">
-                    <div>Total - </div>
+                    <div>Total - (@TotalQuantity items)&nbsp;<b>@TotalPrice</b></div>
                     <a href="#" class="btn btn-success">
                         <span class="oi oi-credit-card"></span>&nbsp; Proceed to Checkout
                     </a>
